[package]
name = "description"
version = "0.1.0"
edition = "2021"
authors = ["Lena <lena@nihil.gay>"]
categories = ["rust-patterns"]
description = "like Display, but 'static"
documentation = "https://docs.rs/description"
keywords = ["derive", "display", "no-std"]
license = "MIT"
repository = "https://github.com/adryzz/description"

[dependencies]
description-macro = { version = "*", path = "description-macro" }

[dev-dependencies]

[workspace]
members = ["description-macro"]
