[package]
name = "description-macro"
version = "0.2.0"
edition = "2021"
authors = ["Lena <lena@nihil.gay>"]
categories = ["rust-patterns"]
description = "implementation detail of the `description` crate"
documentation = "https://docs.rs/description-impl"
keywords = ["derive", "display", "no-std"]
license = "MIT"
repository = "https://github.com/adryzz/description"

[dependencies]
quote = "1.0.37"
syn = "2.0.86"
proc-macro2 = "1.0.89"

[lib]
proc-macro = true
